# server

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
src/: http.c  http.h  resource.c  resource.h  server.c  stream.c  stream.h  user.c  user.h  util.c  util.h
webroot/: index.html  index.js
